<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/CupcakeDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="8dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CupcakeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cupcake_amount"
        app:layout_constraintEnd_toStartOf="@+id/CupcakeUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/CupcakeDown"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/GingerBreadDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="252dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EclairAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/eclair_amount"
        app:layout_constraintEnd_toStartOf="@+id/EclairUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/EclairDown"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/EclairDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="132dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="84dp"
        android:text="Donut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CupcakeUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:text="Cupcake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FroyoDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="192dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/EclairUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="16dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/GingerBreadUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="16dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="268dp"
        android:text="GingerBread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/DonutDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="68dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GingerBreadAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:text="@string/gingerbread_amount"
        app:layout_constraintEnd_toStartOf="@+id/GingerBreadUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/GingerBreadDown"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="148dp"
        android:text="Eclair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DonutAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/donut_amount"
        app:layout_constraintEnd_toStartOf="@+id/DonutUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/DonutDown"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FroyoAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:text="@string/froyo_amount"
        app:layout_constraintEnd_toStartOf="@+id/FroyoUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/FroyoDown"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FroyoUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="16dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/DonutUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="208dp"
        android:text="Froyo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/NougatUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="668dp"
        android:layout_marginEnd="20dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IceCreamSandwichAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:text="@string/icecreamsandwich_amount"
        app:layout_constraintEnd_toStartOf="@+id/IceCreamSandwichUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/IceCreamSandwichDown"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NougatAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="684dp"
        android:text="@string/nougat_amount"
        app:layout_constraintEnd_toStartOf="@+id/NougatUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/NougatDown"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/JellyBeanAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="436dp"
        android:text="@string/jellybean_amount"
        app:layout_constraintEnd_toStartOf="@+id/JellyBeanUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/JellyBeanDown"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HoneyCombAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:text="@string/honeycomb_amount"
        app:layout_constraintEnd_toStartOf="@+id/HoneyCombUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/HoneyCombDown"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/KitKatUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="484dp"
        android:layout_marginEnd="20dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/HoneyCombDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="308dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/IceCreamSandwichUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="20dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/HoneyCombUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="16dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MarshmallowDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="604dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MarshmallowAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:text="@string/marshmallow_amount"
        app:layout_constraintEnd_toStartOf="@+id/MarshmallowUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/MarshmallowDown"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/NougatDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="668dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="436dp"
        android:text="JellyBean"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="684dp"
        android:text="Nougat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="560dp"
        android:text="Lollipop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="376dp"
        android:text="IceCreamSandwich"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="620dp"
        android:text="Marshmallow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="500dp"
        android:text="KitKat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/KitKatDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="484dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/JellyBeanUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="20dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/JellyBeanDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="420dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LollipopAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:text="@string/lollipop_amount"
        app:layout_constraintEnd_toStartOf="@+id/LollipopUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/LollipopDown"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="324dp"
        android:text="HoneyComb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LollipopDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="544dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LollipopUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="544dp"
        android:layout_marginEnd="20dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/KitKatAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:text="@string/kitkat_amount"
        app:layout_constraintEnd_toStartOf="@+id/KitKatUp"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/KitKatDown"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/IceCreamSandwichDown"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="360dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MarshmallowUp"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginTop="604dp"
        android:layout_marginEnd="20dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>